crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_enum_mixed_variants.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToSpan for FlexWrap {
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        match self {
            FlexWrap::Nowrap(v0) => ToSpan::to_span(v0),
            FlexWrap::Wrap { wrap, balance, .. } => {
                ToSpan::to_span(wrap) + ToSpan::to_span(balance)
            }
            FlexWrap::WrapReverse { wrap_reverse, balance, .. } => {
                ToSpan::to_span(wrap_reverse) + ToSpan::to_span(balance)
            }
        }
    }
}
