crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_enum_single_field_variants.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToSpan for Display {
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        match self {
            Display::Block(v0) => ToSpan::to_span(v0),
            Display::Inline(v0) => ToSpan::to_span(v0),
            Display::None(v0) => ToSpan::to_span(v0),
        }
    }
}
