crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_enum_variant_with_fields_named_first_and_last.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToSpan for BaselinePosition {
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        match self {
            BaselinePosition::Both { last, first, .. } => {
                ToSpan::to_span(last) + ToSpan::to_span(first)
            }
        }
    }
}
