crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_enum_variant_with_optional_middle_field.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToSpan for VerticalAlign {
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        match self {
            VerticalAlign::First { first, alignment_baseline, baseline_shift, .. } => {
                ToSpan::to_span(first) + ToSpan::to_span(alignment_baseline)
                    + ToSpan::to_span(baseline_shift)
            }
        }
    }
}
