crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_enum_variant_with_required_middle_field.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToSpan for Rule {
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        match self {
            Rule::Block { open, close, .. } => {
                ToSpan::to_span(open) + ToSpan::to_span(close)
            }
        }
    }
}
