crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_enum_with_named_struct_variant_multiple_fields.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToSpan for BorderStyle {
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        match self {
            BorderStyle::Solid => Span::DUMMY,
            BorderStyle::Dotted { radius, spacing, .. } => {
                ToSpan::to_span(radius) + ToSpan::to_span(spacing)
            }
        }
    }
}
