crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_enum_with_named_struct_variant_single_field.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToSpan for BorderStyle {
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        match self {
            BorderStyle::Solid(first, last) => first.to_span() + last.to_span(),
            BorderStyle::Dashed { width: val } => val.to_span(),
        }
    }
}
