crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_generic_struct.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl<T, U> ::css_parse::ToSpan for Pair<T, U>
where
    T: ::css_parse::ToSpan,
    U: ::css_parse::ToSpan,
{
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        ToSpan::to_span(&self.left) + ToSpan::to_span(&self.right)
    }
}
