crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_to_span__to_span_tuple_struct_multiple_fields.snap
---
source: crates/csskit_derives/src/test/test_to_span.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::ToSpan for Range {
    fn to_span(&self) -> ::css_parse::Span {
        use ::css_parse::{Span, ToSpan};
        ToSpan::to_span(&self.0) + ToSpan::to_span(&self.1)
    }
}
